<resources>
    <string name="app_name">BloodTest</string>
    <string name="main_page">Главная страница</string>
    <string name="testing">Тестирование</string>
    <string name="history">История анализов</string>
    <string name="settings">Настройки</string>
    <string name="about">О приложении</string>

    <string name="warning">Важная информация!</string>
    <string name="textAbout">
        Данное приложение носит исключительно ознакомительный характер. Мы крайне рекомендуем обратиться к врачу, если Вас что-то тревожит!
    </string>
    <string name="back">На главную</string>

    <string name="leik">Лейкоциты</string>
    <string name="erit">Эритроциты</string>
    <string name="gemo">Гемоглобин</string>
    <string name="gemat">Гематокрит</string>
    <string name="SOE">Средний объем эритроцита</string>
    <string name="SSH">Среднее содержание Hb в эритроците</string>
    <string name="SKH">Средняя концентрация Hb в эритроцитах</string>
    <string name="trombocit">Тромбоциты</string>
    <string name="SOT">Средний объем тромбоцита</string>
    <string name="trombokrit">Тромбокрит</string>
    <string name="IRT">Индекс распред. тромбоцитов</string>

    <string name="check">Проверить</string>
    <string name="male">Мужской</string>
    <string name="female">Женский</string>
    <string name="select_gender">Выберете Ваш пол</string>
    <string name="save">Сохранить</string>


    <string name="analysing">Результаты анализов</string>
    <string name="nameFromDb">Показатель</string>
    <string name="userResult">Ваш результат</string>
    <string name="goldCenter">Норма</string>
    <string name="dynamics">Динамика</string>
    <string name="dynamics_back">Назад</string>

</resources>