<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical"
    tools:context=".AnalysingActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Заголовок -->
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/analysing"
            android:background="@drawable/rounded_head"
            android:textSize="34sp"
            android:gravity="center"
            android:padding="20dp" />

        <!-- Заголовки столбцов -->
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_text"
            android:padding="5dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.5"
                android:text="@string/nameFromDb"
                android:textSize="18sp"
                android:gravity="start"
                android:paddingLeft="8dp"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/userResult"
                android:textSize="18sp"
                android:gravity="center"/>

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/goldCenter"
                android:textSize="18sp"
                android:gravity="center"/>
        </TableRow>

        <!-- Контейнер для результатов -->
        <LinearLayout
            android:id="@+id/resultsContainer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:divider="@drawable/divider"
            android:background="@drawable/rounded_text"
            android:padding="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:showDividers="middle"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_margin="10dp">

            <Button
                android:id="@+id/button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/rounded_two_corners"
                android:onClick="goBack"
                android:layout_marginRight="5dp"
                android:text="@string/back"
                android:textSize="18sp" />

            <Button
                android:id="@+id/historyBD"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:layout_marginLeft="5dp"
                android:background="@drawable/rounded_two_corners"
                android:textSize="18sp"
                android:onClick="goHistory"
                android:text="@string/history" />
        </LinearLayout>
    </LinearLayout>
</ScrollView>